[tool.poetry]
name = "ramqp"
version = "1.3.1"
description = "Rammearkitektur AMQP library (aio_pika wrapper)"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^7.1.2"
structlog = "^21.5.0"
prometheus-client = "^0.13.1"
pydantic = "^1.9.0"
more-itertools = "^8.12.0"
pytest-asyncio = "^0.18.3"
fastapi = "^0.75.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
reorder-python-imports = "^3.0.1"
mypy = "^0.942"
pre-commit = "^2.18.1"
ra-utils = "^1.0.0"
hypothesis = "^6.41.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"

[tool.pytest.ini_options]
asyncio_mode="auto"
markers = [
    "integrationtest: marks tests as integration tests (Need RabbitMQ)",
    "unittest: marks tests as unit tests (i.e. all non-integration tests"
]

[tool.mypy]
python_version = 3.8
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 88
exclude = [
".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]
